<resources>
    <string name="app_name">Room Designer AR</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="enter_here">Enter here…</string>
    <string name="verify_an_email">Verify an Email</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an Account? Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_account">Create Account</string>
    <string name="first_name">First Name</string>
    <string name="enter_the_details_bellow_to_create_your_account">Enter the details bellow to create your account.</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="already_have_an_account_sign_in">Already have an Account? Sign In</string>
    <string name="verify_your_email">Verify your Email</string>
    <string name="email_verify_desc">You should have received an email from us containing a token. Give it a few minutes or check your junk mail if hasn\'t arrived yet.</string>
    <string name="verify">Verify</string>
    <string name="resend_token">Resend Token</string>
    <string name="enter_the_code_here">Enter the token here…</string>
    <string name="enter_your_details_bellow_sign_in">Enter your details bellow to sign-in or to verify an existing account.</string>
    <string name="password_recovery">Password Recovery</string>
    <string name="forgot_password_desc">Enter your registered email.\nYou should receive an email containing a token. This would enable you to reset your password.</string>
    <string name="enter_you_email_here">Enter you email here…</string>
    <string name="send_token">Send Token</string>
    <string name="change_password">Change Password</string>
    <string name="i_already_have_a_token">I already have a Token</string>
    <string name="change_password_confirmation">Change Password Confirmation</string>
    <string name="enter_you_new_password_and_confirm">Enter you new password and confirm.</string>
    <string name="filter">Filter &amp; Sort</string>
    <string name="main_library">Main Library</string>
    <string name="item_name">Item Name</string>
    <string name="description">Description</string>
    <string name="contact_information">Contact Information</string>
    <string name="similar_products">Similar Products</string>

    <string name="action_settings">Settings</string>
    <string name="search">search</string>
    <string name="my_library">My Library</string>

    <string name="navigation_drawer_open">Navigation Drawer Open</string>
    <string name="navigation_drawer_close">Navigation Drawer Close</string>
    <string name="ar">AR</string>
    <string name="start_count_default">0</string>
    <string name="logout">Logout</string>
    <string name="my_account">My Account</string>
    <string name="statistics">Statistics</string>
    <string name="cancel">Cancel</string>
    <string name="delete_account">Delete Account</string>
    <string name="change_account_details">Change Account Details</string>
    <string name="submit">submit</string>
    <string name="verify_your_account">Verify your Account!</string>

    <string-array name="types">
        <item>Ceil-Mounted</item>
        <item>Ground Item</item>
        <item>Wall-Mounted</item>
    </string-array>

    <string-array name="categories">
        <item>Sofas &amp; Armchairs</item>
        <item>Sofa Beds</item>
        <item>Tables &amp; Desks</item>
        <item>Chairs</item>
        <item>Beds</item>
        <item>Wardrobes</item>
        <item>Drawers</item>
        <item>Bookcases &amp; Shelves</item>
        <item>Cabinets &amp; Cupboards</item>
        <item>TV or Media Furniture</item>
        <item>Other</item>
    </string-array>
</resources>
