<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="VM"
            type="com.tahmidu.room_designer_client_android.view_model.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.EditItemFragment">


        <LinearLayout
            android:id="@+id/linearLayout7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView35"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/segoe_bold"
                android:paddingBottom="20dp"
                android:text="Your Account Details"
                android:textColor="@color/colorTextPrimary"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView36"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/segoe"
                android:lineSpacingExtra="14sp"
                android:text="@string/first_name"
                android:textColor="@color/colorTextPrimary"
                android:textSize="18sp"
                android:paddingBottom="10dp"/>

            <TextView
                android:id="@+id/my_account_fn_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/segoe"
                android:text="@{VM.usersAccountLiveData.firstName}"
                android:textColor="@color/colorTextSecondary"
                android:paddingBottom="5dp"/>

            <TextView
                android:id="@+id/textView40"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/segoe"
                android:text="@string/last_name"
                android:textColor="@color/colorTextPrimary"
                android:textSize="18sp"
                android:paddingBottom="10dp"/>

            <TextView
                android:id="@+id/my_account_ln_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{VM.usersAccountLiveData.lastName}"
                android:fontFamily="@font/segoe"
                android:textColor="@color/colorTextSecondary"
                android:paddingBottom="5dp"/>

            <TextView
                android:id="@+id/textView41"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/segoe"
                android:text="@string/phone_number"
                android:textColor="@color/colorTextPrimary"
                android:textSize="18sp"
                android:paddingBottom="10dp"/>

            <TextView
                android:id="@+id/my_account_pn_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{VM.usersAccountLiveData.phoneNum}"
                android:fontFamily="@font/segoe"
                android:textColor="@color/colorTextSecondary"
                android:paddingBottom="5dp"/>

            <TextView
                android:id="@+id/textView42"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/segoe"
                android:text="@string/email"
                android:textColor="@color/colorTextPrimary"
                android:textSize="18sp"
                android:paddingBottom="10dp"/>

            <TextView
                android:id="@+id/my_account_email_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{VM.usersAccountLiveData.email}"
                android:fontFamily="@font/segoe"
                android:textColor="@color/colorTextSecondary"
                android:paddingBottom="5dp"/>

        </LinearLayout>

        <Button
            android:id="@+id/my_account_change_details_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/green_rounded_btn"
            android:text="@string/change_account_details"
            android:onClick="@{() -> VM.navigateFragment(VM.CHANGE_ACC_DETAILS_FRAGMENT)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout7" />

        <Button
            android:id="@+id/my_account_password_change_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/green_rounded_btn"
            android:text="@string/change_password"
            android:onClick="@{() -> VM.navigateFragment(VM.CHANGE_ACC_PASSWORD_FRAGMENT)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/my_account_change_details_btn" />

        <Button
            android:id="@+id/my_account_delete_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/red_rounded_btn"
            android:text="@string/delete_account"
            android:onClick="@{() -> VM.deleteUser()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/my_account_password_change_btn" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>