<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="com.tahmidu.room_designer_client_android.view_model.WelcomeViewModel"/>
        <import type="android.view.View"/>
        <variable
            name="VM"
            type="com.tahmidu.room_designer_client_android.view_model.WelcomeViewModel" />
        <variable
            name="login"
            type="com.tahmidu.room_designer_client_android.model.Login" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark">


        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="64dp"
            android:adjustViewBounds="true"
            android:background="@null"
            android:scaleType="centerCrop"
            android:src="@drawable/lock"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/segoe"
            android:text="@string/password_recovery"
            android:textColor="@color/colorTextPrimary"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="380sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/segoe"
            android:text="@string/forgot_password_desc"
            android:textAlignment="center"
            android:textColor="@color/colorTextSecondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/segoe"
                android:paddingStart="3sp"
                android:paddingEnd="3sp"
                android:text="@string/email"
                android:textColor="@color/colorTextPrimary"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:ems="10"
                android:hint="@string/enter_you_email_here"
                android:inputType="textEmailAddress"
                android:paddingBottom="20sp"
                android:shadowColor="@color/colorTextSecondary"
                android:text="@={login.email}"
                android:textColor="@color/colorTextPrimary"
                android:textColorHint="@color/colorTextSecondary"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:fontFamily="@font/segoe"
            android:textColor="@android:color/holo_red_light"
            android:text="@{VM.passwordEmailResponse}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

        <Button
            android:id="@+id/send_password_token"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/rounded_btn"
            android:fontFamily="@font/segoe"
            android:onClick="@{() -> VM.forgotPassword(login.email, true)}"
            android:text="@string/send_token"
            android:textAllCaps="false"
            android:textColor="@color/colorTextPrimary"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView23" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="64dp"
            android:fontFamily="@font/segoe"
            android:onClick="@{() -> VM.forgotPassword(login.email,false)}"
            android:text="@string/i_already_have_a_token"
            android:textAlignment="center"
            android:textColor="@color/colorTextPrimary"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/send_password_token" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginStart="64dp"
            android:layout_marginEnd="64dp"
            android:fontFamily="@font/segoe"
            android:onClick="@{() -> VM.navigateFragment(WelcomeViewModel.SIGN_UP_FRAGMENT)}"
            android:text="@string/don_t_have_an_account_sign_up"
            android:textAlignment="center"
            android:textColor="@color/colorTextPrimary"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13"
            app:layout_constraintVertical_bias="0.75" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>